@@ -74,6 +74,7 @@ const FontData* FontCache::getFontDataForCharacters(const Font& font, const UCha
     HDC hdc = GetDC(0);
     HFONT primaryFont = font.primaryFont()->m_font.hfont();
     HGDIOBJ oldFont = SelectObject(hdc, primaryFont);
+    HFONT hfont = 0;
 
     DWORD acpCodePages;
     langFontLink->CodePageToCodePages(CP_ACP, &acpCodePages);
@@ -89,7 +90,7 @@ const FontData* FontCache::getFontDataForCharacters(const Font& font, const UCha
             GetObject(result, sizeof(LOGFONT), &lf);
             langFontLink->ReleaseFont(result);
 
-            HFONT hfont = CreateFontIndirect(&lf);
+            hfont = CreateFontIndirect(&lf);
             SelectObject(hdc, hfont);
 
             WCHAR name[LF_FACESIZE];
@@ -105,6 +106,8 @@ const FontData* FontCache::getFontDataForCharacters(const Font& font, const UCha
     }
 
     SelectObject(hdc, oldFont);
+    if (hfont)
+        DeleteObject(hfont);
     ReleaseDC(0, hdc);
     return fontData;
 }
