@@ -1,3 +1,12 @@
+2007-10-02  Steve Falkenburg  <sfalken@apple.com>
+
+        Reviewed by Adam, Ada.
+
+        Fix leak of GDI handle when we call MLANG.
+
+        * platform/win/FontCacheWin.cpp:
+        (WebCore::FontCache::getFontDataForCharacters):
+
 2007-10-02  Lars Knoll  <lars@trolltech.com>
 
         Reviewed by Olliej.
